@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-10T08:21:29Z",
-  "count_outdated" : 2220,
-  "uniques_outdated" : 472,
-  "count" : 2275,
+  "timestamp" : "2022-07-10T16:24:27Z",
+  "count_outdated" : 2221,
+  "uniques_outdated" : 473,
+  "count" : 2276,
   "uniques" : 503,
   "clones" : [
-    {
-      "timestamp": "2022-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-27T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
