@@ -1,3 +1,10 @@
+2022-07-10T16:24:27Z:
+* notice: last 14d: unq all: 15 55
+* notice: prev accum: outdated-unq outdated-all / unq all: 472 2220 / 503 2275
+* notice: next accum: outdated-unq outdated-all / unq all: 473 2221 / 503 2276
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-26] / [2022-07-10]
+
 2022-07-10T08:21:29Z:
 * notice: last 14d: unq all: 15 55
 * notice: prev accum: outdated-unq outdated-all / unq all: 472 2220 / 502 2274
